Tue Feb 21 17:45:28 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * MPC/config/iccm_opensplice_stub.mpb:

          Removed /FORCE from the link_options since the fixes to the
          building the custom library resolved this hack.

Tue Feb 21 17:42:58 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * contrib/OpenSplice/CCPP.mpc:

          Bug fix where the export macro was not defined correctly. This
          prevent libraries from importing symbols from the custom library.

Tue Feb 21 16:45:39 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * contrib/OpenSplice/CCPP.mpc:

          Added TypeCode support to the compiler flags.

Mon Feb 20 20:08:45 UTC 2012  Manjula Peiris  <tmpeiris at cs dot iupui dot edu>

        * cuts/iccm/arch/tron/deployment/Tron_Deployment_Handlers.mpc:
        * cuts/iccm/arch/tron/servant/Tron_Servant.mpc:

          Added requies_tron to the mpc projects which are missing it.


Mon Feb 20 15:37:32 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * bin/iCCM/templates/cpp/servant/Publisher_T.h.tmpl:

          Added event_type typedef and set the default
          behavior of send_event to use the EVENT template
          parameter.

        * bin/iCCM/templates/cpp/servant/Servant_T.h.tmpl:

          Fixed base_type typedef.

        * cuts/iccm/arch/tron/servant/Tron_Publisher_T.h:
        * cuts/iccm/arch/tron/servant/Tron_Servant_T.h:

          Regenerated the tron iccm arch using the updated
          templates.

        * cuts/iccm/servant/Servant_T.cpp:

          Fixed gcc compilation error by adding typename
          to the consumer_map_type iterator.

Thu Feb 16 19:00:24 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * MPC/config/requires_tron.mpb:

          Fixed typo on include path.

        * bin/iCCM/templates/cpp/deployment/Container.h.tmpl:
        * bin/iCCM/templates/cpp/deployment/Container_Strategy.h.tmpl: