@@ -55,7 +55,7 @@ int Downcall_Event::visit_eventtype (AST_EventType * node)
 
   this->hfile_
     << this->downcall_event_ << " :" << std::endl
-    << "  public virtual ::" << local_name << "," << std::endl
+    << "  public virtual " << local_name << "," << std::endl
     << "  public virtual ::CORBA::DefaultValueRefCountBase" << std::endl
     << "{"
     << "public:" << std::endl
@@ -81,7 +81,7 @@ int Downcall_Event::visit_eventtype (AST_EventType * node)
 
   this->hfile_
     << "private:" << std::endl
-    << "::" << dds_event << " dds_event_;"
+    << dds_event << " dds_event_;"
     << std::endl
     << "::CORBA::Boolean _tao_marshal__" << local_name << " (TAO_OutputCDR &, TAO_ChunkInfo &) const;"
     << "::CORBA::Boolean _tao_unmarshal__" << local_name << " (TAO_InputCDR &, TAO_ChunkInfo &);"
